[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Objects/DigitalDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://Materials/SpatialMaterials/BrightRed.tres" type="Material" id=2]
[ext_resource path="res://Scripts/Objects/3D_measurement_point.gd" type="Script" id=3]

[sub_resource type="SphereMesh" id=1]

[node name="3D_measurement_point" type="Spatial"]
script = ExtResource( 3 )

[node name="PositionDisplay_x" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.85908, 0.0189703, -0.460567 )

[node name="PositionDisplay_y" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.8558, -0.333309, -0.460567 )

[node name="PositionDisplay_z" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.8558, -0.710751, -0.460567 )

[node name="TimeDisplay" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.22244, -0.33953, -0.460567 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )
